--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,9 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["./src/*"]
+  },
   "references": [{ "path": "./tsconfig.node.json" }]
 }
