--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,12 @@ tauri = { version = "1.4", features = [ "path-all", "dialog-open", "shell-open"]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sled = "0.34.7"
+walkdir = "2.4.0"
+serde_yaml = "0.9.25"
+chrono = { version = "0.4.31", features = ["serde"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
