--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ sled = "0.34.7"
 walkdir = "2.4.0"
 serde_yaml = "0.9.25"
 chrono = { version = "0.4.31", features = ["serde"] }
+itertools = "0.11.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
